# Mirip_v2

./: .env.example  .gitignore  BACKEND_V2_PLAN.md  README.md  package-lock.json  package.json  roadmap.md
backend/: .env.example  README.md  pyproject.toml
backend/deploy/: Dockerfile.api  Dockerfile.worker  bootstrap_gcp.sh  build_and_push_image.sh  cloudrun.service.yaml  deploy_api.sh  deploy_stub_stack.sh  deploy_worker_template.sh  gpu-worker-startup.sh  spot-worker-startup.sh
backend/deploy/env/: api.env.example  worker.env.example
backend/scripts/: firebase_emulator.sh  run_api.sh  run_worker.sh  seed_data.py
backend/src/mirip_backend/: __init__.py
backend/src/mirip_backend/api/: app.py  lifespan.py
backend/src/mirip_backend/api/errors/: handlers.py
backend/src/mirip_backend/api/middleware/: request_context.py
backend/src/mirip_backend/api/routes/: competitions.py  credentials.py  diagnosis.py  health.py  profiles.py  uploads.py
backend/src/mirip_backend/api/schemas/: common.py  competitions.py  credentials.py  diagnosis.py  profiles.py  uploads.py
backend/src/mirip_backend/domain/auth/: models.py
backend/src/mirip_backend/domain/common/: models.py  ports.py
backend/src/mirip_backend/domain/competitions/: entities.py  repositories.py
backend/src/mirip_backend/shared/: clock.py  enums.py  exceptions.py  ids.py  upload_paths.py
backend/src/mirip_backend/worker/: claim.py  main.py  poller.py  result_writer.py
backend/tests/: conftest.py
backend/tests/e2e/: test_diagnosis_job_flow.py
backend/tests/integration/: test_credentials_route.py  test_health_route.py  test_profile_routes.py  test_upload_routes.py
backend/tests/unit/: test_auth_deps.py  test_competition_submission.py  test_compute_launcher.py  test_create_diagnosis_job.py  test_create_upload_session.py  test_job_poller.py  test_job_poller_heartbeat.py  test_job_queue.py  test_model_bundle.py  test_pagination.py  test_portfolio_items.py  test_profiles.py  test_publish_credential.py  test_upload_lifecycle.py  test_worker_inference_cpu_onnx.py
docs/: vast_ai_preparation.md
(+176 files in other folders)
